# AAL-CraneBallSorting

./: .gitignore  AlgorithmRunner.cpp  AlgorithmRunner.hpp  CMakeLists.txt  Generator.cpp  Generator.hpp  InterfaceHandler.cpp  InterfaceHandler.hpp  Makefile  README.md  main.cpp  output_table.txt  readme.txt
include/: AlgorithmRunner.hpp  Clock.hpp  Generator.hpp  InterfaceHandler.hpp
src/: AlgorithmRunner.cpp  Clock.cpp  Generator.cpp  InterfaceHandler.cpp  main.cpp
